<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.1</version>
		<relativePath/>
	</parent>
	<groupId>sg.nus</groupId>
	<artifactId>backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>backend</name>
	<description>CareLink backend</description>

	<properties>
		<java.version>25</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<archunit.version>1.5.0</archunit.version>
		<jacoco.version>0.8.15</jacoco.version>
		<dependency.check.version>13.0.0</dependency.check.version>
		<sonar.version>5.8.0.7211</sonar.version>
		<testcontainers.version>2.0.5</testcontainers.version>
		<!--
		  Excluded from coverage because there is no logic to cover. Measuring these
		  only invites tests that assert a getter returns what was set, which find
		  nothing and make people resent writing tests. Domain models, mappers,
		  services and controllers are deliberately NOT excluded.
		-->
		<sonar.coverage.exclusions>
			**/BackendApplication.java,
			**/dto/**,
			**/*JpaEntity.java,
			**/*JpaRepository.java,
			**/config/**,
			**/package-info.java
		</sonar.coverage.exclusions>
		<sonar.coverage.jacoco.xmlReportPaths>
			${project.build.directory}/site/jacoco/jacoco.xml
		</sonar.coverage.jacoco.xmlReportPaths>
		<!--
		  JPA entities are structurally repetitive by nature (one field, one getter, one
		  setter per column); duplication detection on them reports noise, not a defect.
		-->
		<sonar.cpd.exclusions>
			**/*JpaEntity.java
		</sonar.cpd.exclusions>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-flyway</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!--
		  Swagger UI to browse the hand-written, spec-first contract at
		  docs/api/openapi.yaml (see the resources declaration below). This is
		  static assets only - nothing here inspects controllers or generates a
		  spec, so the UI can never drift silently from what was actually
		  designed; a controller that disagrees with the spec is a bug to fix,
		  not something the tooling papers over.
		-->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>swagger-ui</artifactId>
			<version>5.27.0</version>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-flyway-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Integration tests use a real MySQL container rather than pretending with an in-memory database -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-mysql</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Architecture tests: turn the layering rules into build-time constraints -->
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>${archunit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
			</resource>
			<!--
			  The OpenAPI contract lives at repo root (docs/api/), not under this
			  module, because it is written before the code and is a contract the
			  front end reads too - not an artifact of the backend build. This
			  copies both the final contract and the superseded draft onto the
			  classpath so Spring serves them at /openapi.yaml and
			  /openapi-draft.yaml alongside the Swagger UI page in static/docs/.
			  The Docker build copies docs/api/ to the same relative location
			  before this runs - see Dockerfile.
			-->
			<resource>
				<directory>${project.basedir}/../docs/api</directory>
				<targetPath>static</targetPath>
				<includes>
					<include>openapi.yaml</include>
					<include>openapi-draft.yaml</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- Surefire runs *Test only; *IT integration tests belong to failsafe -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/*IT.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Coverage: produces jacoco.xml for SonarCloud to read -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals><goal>prepare-agent</goal></goals>
					</execution>
					<execution>
						<id>report</id>
						<!-- Include integration coverage when the integration profile is active. -->
						<phase>verify</phase>
						<goals><goal>report</goal></goals>
					</execution>
					<!--
					  The domain-layer coverage threshold promised in the proposal. It is
					  scoped to domain packages on purpose: that is where the business rules
					  and the design patterns live, it is plain Java that tests cheaply, and
					  a blanket threshold across DTOs and JPA entities would only produce
					  tests that assert nothing.
					-->
					<execution>
						<id>check-domain-coverage</id>
						<phase>verify</phase>
						<goals><goal>check</goal></goals>
						<configuration>
							<haltOnFailure>true</haltOnFailure>
							<rules>
								<rule>
									<element>PACKAGE</element>
									<includes>
										<include>sg.nus.carelink.*.domain.*</include>
									</includes>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.80</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!--
			  Kept for local use only; the pipeline scans with Trivy instead.
			  Dependency-Check rebuilds the entire NVD corpus on the machine that runs
			  it - measured at roughly four and a half hours from cold, with an NVD API
			  key making no difference - which is tolerable on a developer machine where
			  the database persists, and not tolerable on a stateless CI runner.
			  Run it by hand when a second opinion or an OWASP-format report is wanted:
			      ./mvnw dependency-check:check -DnvdApiKeyEnvironmentVariable=NVD_API_KEY
			-->
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>${dependency.check.version}</version>
				<configuration>
					<failBuildOnCVSS>7</failBuildOnCVSS>
					<formats>
						<format>HTML</format>
						<format>JSON</format>
					</formats>
					<!-- Analysers we have no use for; leaving them on only costs time -->
					<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
					<nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
					<nodeAuditAnalyzerEnabled>false</nodeAuditAnalyzerEnabled>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>${sonar.version}</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!-- mvn verify -Pintegration -->
		<profile>
			<id>integration</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
